# ga4-etl

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  config.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  extract.py  load.py  notification.py  transform.py  utils.py
