[tool.poetry]
name = "ga4-etl"
version = "0.1.0"
description = "GA4データをBigQueryから抽出し、解析しやすいデータ構造に変換して再度BigQueryにロードするETLパイプライン"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery = "3.30.0"
google-cloud-storage = "3.1.0"
google-cloud-run = "0.10.16"
slack-sdk = "3.34.0"
python-dotenv = "1.0.0"
pyyaml = "6.0.2"
ruff = "^0.9.9"
pandas = "^2.2.3"
pandas-gbq = "^0.28.0"
pyarrow = "^19.0.1"
google-cloud-bigquery-storage = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.5.1"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]

[tool.poetry.scripts]
ga4-etl = "main:main"
